prevent horizontal overflow on body

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 body {
   font-family: "Maven Pro", sans-serif;
   padding-top: 70px;
+  overflow-x: hidden !important;
 }
 
 
